[gd_scene load_steps=2 format=3 uid="uid://l2blvdl1xl63"]

[ext_resource type="Script" path="res://Scripts/sc_scatter.gd" id="1_8yk6e"]

[node name="sc_scatter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8yk6e")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.996078, 0.980392, 0.878431, 1)

[node name="SplitContainer" type="SplitContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 250

[node name="ScrollContainer" type="ScrollContainer" parent="SplitContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="InputContainer" type="VBoxContainer" parent="SplitContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="DataModeContainer" type="HBoxContainer" parent="SplitContainer/ScrollContainer/InputContainer"]
layout_mode = 2

[node name="CheckboxLabel" type="Label" parent="SplitContainer/ScrollContainer/InputContainer/DataModeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Вводить x и y вместе"

[node name="SingleDataModeCheckBox" type="CheckBox" parent="SplitContainer/ScrollContainer/InputContainer/DataModeContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DataInputX" type="TextEdit" parent="SplitContainer/ScrollContainer/InputContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="DataInputY" type="TextEdit" parent="SplitContainer/ScrollContainer/InputContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="AxisNamesLabel" type="Label" parent="SplitContainer/ScrollContainer/InputContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Введите названия осей:"

[node name="XAxisLabelInput" type="TextEdit" parent="SplitContainer/ScrollContainer/InputContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="YAxisLabelInput" type="TextEdit" parent="SplitContainer/ScrollContainer/InputContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="AnalyzeButton" type="Button" parent="SplitContainer/ScrollContainer/InputContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "AnalyzeButton"

[node name="StatsLabel" type="Label" parent="SplitContainer/ScrollContainer/InputContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
autowrap_mode = 1

[node name="DiagramContainer" type="Control" parent="SplitContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SaveButton" type="Button" parent="SplitContainer/DiagramContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -95.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Сохранить"
